@@ -6,7 +6,7 @@ describe("MessageReaderWriter behavior", function()
     local utils = require "mt5.utils"
 
     local tt = {
-      mtype = enums.MSGTYPE_BALANCE_VALUE,
+      mtype = enums.MSGTYPE_BALANCE_UPDATED,
       marketType = enums.MARKET_REAL,
       time = { year=2015, month=3, day=19, hours=12, mins=1, secs=2, msecs=345},
       value = 3000.23,
